Update styling in creator services

--- a/services/templates/services/base.html
+++ b/services/templates/services/base.html
@@ -32,8 +32,8 @@
                         </h1>
                     </div>
                 </a> 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler text-danger bg-danger" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon" style="color:red !important;" ></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
@@ -104,18 +104,18 @@
                                 <a href="mailto:nova@createnova.org" class="text-white">nova@createnova.org</a>
                             </li>
                             <li>
-                                <a href="#!" class="text-white">+62 Placeholder Phone Number</a>
+                                <a href="#!" class="text-white mt-2">+62 Placeholder Phone Number</a>
                             </li>
                         </ul>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                         <h5 class="text-uppercase">Follow Us</h5>
-                        <a href="https://www.linkedin.com/company/99204935" class="text-white">
+                        <a href="https://www.linkedin.com/company/99204935" target="_blank" class="text-white">
                             <i class="fab fa-linkedin"></i> LinkedIn
                         </a>
                     </div>
                 </div>
-                <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                <div class="text-center p-3 mt-2" style="background-color: rgba(0, 0, 0, 0.2);">
                     © 2024 Create Nova
                 </div>
             </div>
