Createnova contact page

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -93,25 +93,13 @@
             <div class="container p-4">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-                        <h5 class="text-uppercase">Create Nova</h5>
+                        <h5 class="text-uppercase">About Us</h5>
                         <p>Indonesia's premier digital marketing and web development agency.</p>
+                        <a href="{% url 'contact' %}#about-us" class=" mt-2 mb-2 btn btn-outline-light btn-sm">Learn More</a>
                     </div>
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                        <h5 class="text-uppercase">Contact</h5>
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="mailto:nova@createnova.org" class="text-white">nova@createnova.org</a>
-                            </li>
-                            <li>
-                                <a href="#!" class="text-white mt-2">+62 Placeholder Phone Number</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                        <h5 class="text-uppercase">Follow Us</h5>
-                        <a href="https://www.linkedin.com/company/99204935" target="_blank" class="text-white">
-                            <i class="fab fa-linkedin"></i> LinkedIn
-                        </a>
+                    <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                        <h5 class="text-uppercase">Contact Us</h5>
+                        <a href="{% url 'contact' %}#contact-us" class=" mt-2 mb-2 btn btn-outline-light btn-sm">Get in Touch</a>
                     </div>
                 </div>
                 <div class="text-center p-3 mt-2" style="background-color: rgba(0, 0, 0, 0.2);">
