--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     {% block navbar %}
-    <header class="container-fluid m-0 p-0 w-100 d-flex justify-content-center align-items-center">
+    <header class="container-fluid m-0 p-0 w-100  d-flex justify-content-center align-items-center fixed-top" style="margin-bottom:200px;" >
         <nav class="navbar navbar-expand-lg w-100 glass-navbar">
             <div class="container-fluid d-flex justify-content-between align-items-center ">
                 <a class="navbar-brand justify-content-center" href="{% url 'home' %}">     
@@ -83,23 +83,27 @@
             </div>
             {% endfor %}
         </div>
+        
         {% endif %}
+        <main  style="margin-top:200px;" >
         {% endblock %}
         {% block content %}
         <!-- Main content will be here -->
         {% endblock %}
         {% block footer %}
-        <footer class="bg-dark text-light text-center text-lg-start">
+        </main>
+        <div class="w-100" style="margin-bottom:100px;"></div>
+        <footer class="bg-dark text-light text-center text-lg-start sticky-bottom glass-navbar" >
             <div class="container p-4">
                 <div class="row">
-                    <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <div class="col-12 col-md-6 col-lg-6  mb-4 mb-md-0 text-center">
                         <h5 class="text-uppercase">About Us</h5>
                         <p>Indonesia's premier digital marketing and web development agency.</p>
-                        <a href="{% url 'contact' %}#about-us" class=" mt-2 mb-2 btn btn-outline-light btn-sm">Learn More</a>
+                        <a href="{% url 'contact' %}#about-us" class=" mt-2 mb-2 btn btn-outline-light btn-sm {% if request.resolver_match.url_name == 'contact' %}disabled{% endif %}">Learn More</a>
                     </div>
-                    <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <div class="col-12 col-md-6 col-lg-6  mb-4 mb-md-0 text-center">
                         <h5 class="text-uppercase">Contact Us</h5>
-                        <a href="{% url 'contact' %}#contact-us" class=" mt-2 mb-2 btn btn-outline-light btn-sm">Get in Touch</a>
+                        <a href="{% url 'contact' %}#contact-us" class=" mt-2 mb-2 btn btn-outline-light btn-sm {% if request.resolver_match.url_name == 'contact' %}disabled{% endif %}">Get in Touch</a>
                     </div>
                 </div>
                 <div class="text-center p-3 mt-2" style="background-color: rgba(0, 0, 0, 0.2);">
