--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -21,7 +21,7 @@
 <section id="contact-us" class="contact-section bg-light" >
     <div class="container py-5">
         <div class="row justify-content-center">
-            <div class="col-12 col-lg-6 mt-4 mt-lg-0 mb-5">
+            <div class="d-none d-lg-flex col-lg-6 mt-4 mt-lg-0 mb-5">
                 <div id="lottie-animation6"></div>
             </div>
             <div class="col-12 col-lg-6 text-center">
