--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -55,7 +55,7 @@
 {% endif %}
     <section id="below-hero">
         <div class="container my-5">
-          <div class="row">
+          <div class="row d-flex justify-content-center align-items-center">
             <div class="col-10 col-md-8 col-lg-6">
               <div class="home-content text-center row d-flex justify-content-center align-items-center ">
                 
@@ -76,7 +76,7 @@
       </section>
       <section id="website-services">
         <div class="container my-5">
-          <div class="row justify-content-end">
+          <div class="row d-flex justify-content-center align-items-center">
             <div class="d-none d-lg-flex justify-content-between col-lg-5">
                 <div id="lottie-animation2"></div>
             </div>
