--- a/services/templates/services/base.html
+++ b/services/templates/services/base.html
@@ -92,9 +92,9 @@
         {% endblock %}
         {% block footer %}
         </main>
-        <div class="w-100" style="margin-bottom:100px;"></div>
-        <footer class="bg-dark text-light text-center text-lg-start sticky-bottom glass-navbar" >
-            <div class="container p-4">
+        
+        <footer class="bg-dark text-light text-center text-lg-start footer-style glass-navbar" >
+            <div class="container p-4 ">
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-6  mb-4 mb-md-0 text-center">
                         <h5 class="text-uppercase">About Us</h5>
