Correct footer position

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -230,7 +230,7 @@ ul li a {
   
   /* Footer adjustments for a sticky footer */
 
-  position: sticky;
+  margin-top: auto;
   bottom: 0;
   width: 100%;
 
