--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,11 @@
     padding: 0;
     margin: 0;
 }
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 
 /* Brand text styling */
 .brand-name {
@@ -230,7 +235,7 @@ ul li a {
   
   /* Footer adjustments for a sticky footer */
 
-  margin-top: auto;
+  
   bottom: 0;
   width: 100%;
 
