--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -4,6 +4,7 @@
 <head>
     {% block head %}
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="Yw9_M5VXqgzgK3-TvayKCoXY6RA0YetDDu6cb5kLfSQ" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Nova - Digital Marketing & Web Development</title>
     <meta name="description" content="Create Nova, your digital marketing and web development partner in Indonesia, offers services in web design, SEO, content creation, and online advertising.">
